--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Let's Learn Git, GitHub and the Command Line</title>
+	<title>Let's get moving to Learn Git, GitHub and the Command Line</title>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<section>
-		<h1>Git, GitHub & the Command Line</h1>
+		<h1>Without a doubt, make no mistake about it my friends, one thing is sure, that Learning Git, GitHub & the Command Line is critical for collaborative coding.</h1>
 		<p>Gotta love becoming a collaborative coder <3</p>
 		<img src="img/happy-blue-robot.png">
 	</section>
