additional changes to font and paragraph

--- a/Desktop/skillcrush/105-projects/adviceproject/steve-advice.html
+++ b/Desktop/skillcrush/105-projects/adviceproject/steve-advice.html
@@ -1,40 +1,50 @@
 <!DOCTYPE html>
-<html land=en>
+<html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/steve-advice.css">
+	<link rel="stylesheet" type="text/css" href="steve-advice.css">
 	<link href="https://fonts.googleapis.com/css?family=Cabin" rel='stylesheet' type='text/css'>
-	<link href="https://fonts.googleapis.com/css?family=Raleway" rel='stylesheet' type='text/css'>
-	<link href="https://fonts.googleapis.com/css?family=Roboto" rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans" rel='stylesheet' type='text/css'>
+	<link href="advice-template.html">
 
-	<!-- Steve Luzkow's advice -->
+
+	<!-- Steve advice -->
 	<title>Skillcrush's Advice For Newbies</title>
 </head>
 
 <!-- Advice for others from steve luzkow, who are beginning their journey with Skillcrush: google a lot and make good notes from the transcripts and videos -->
 <body>
-		<header>
-			<a href="../index.html">Back to Main Page</a>
-				<h1>Hi, my name is Steve <br>and <br> I have some great advice for you!</h1>
-		</header>
+	<header>
+		<a href="../index.html">Back to Main Page</a>
+		<h1>Hi, my name is Steve and I have some <br> practical advice for you!</h1>
+	</header>
 
 		<main>
-				<h2>Confusion is your friend!</h2>
-					<p>When you start programming your first web app you are doing something that you have never done before. It's a new challenge, a new opportunity, and in the case of software development, something so specific that it's probably never been done before.</p>
 
-					<p>Confusion, therefore, is a sign that you are heading in the right direction. It's a signal that you have engaged in the problem solving pursuit that is math and technology and that it's time for you to dig deeper and keep going because clarity awaits.</p>
+			<h2>CONFUSION IS NECESSARY as stated in the course exercise !</h2>
 
-					<h2>Suspended disbelief plays an important role.</h2>
-					<p>When you are learning a new technology, whether you are learning to write your first programming language, or just the latest framework, you go through this uncomfortable phase where you know that the code you are looking at is doing this THING but you don't understand HOW exactly it's happening.</p>
+			<p>Remember researching and retrying are essential to coding. Be persistant and keep trying to tackle the challenges. Do not give up or be discouraged.</p>
 
-					<p>This is a normal part of the process of learning a new technology, and in fact, it's a critical part of the process.</p>
+			<p>Go back and review coursse materials that covers the source of your confusion. Also. Google and do some research to get information on the challenge. This is what developers do. Also, developers are a source of problem resolution, so problems and confusion is the right place to be as a developer. As stated in the original text "It's a signal that you have engaged in the problem solving pursuit that is math and technology and that it's time for you to dig deeper and keep going because clarity awaits.</p>
 
-					<p>You see when you encounter a new programming language part of your learning process includes learning to train your eye. The way to train your eye is to read a good deal of code even when you don't totally understand what it's doing.</p>
-		</main>
+			<h2>Suspended Discouragement!</h2>
 
-		<!-- Steve -->
-    <p><br>&copy; Copyright Skillcrush 2014.</p>
+			<p>As many have said, when it comes to confusion its time to resolve through research and through the help of others. Teamwork is critical and that starts now with the student community and instructor sessions. </p>
+
+			<p>You do not know it all, and sharing our skills through collaboration with our team-mates helps fill in those VOIDS WE ALL HAVE.</p>
+
+			<h2> Stay Organized!</h2>
+
+			<p>Take good notes and review the Skillcrush transcripts. What seems easy at first is easily forgotten and not all steps are itterated in subsequent instructions.</p>
+
+			<p>Organizatiuon is critical to researching a challenge and helps you build functional resources. Again, this is a normal part of the process of learning a new technology, and in fact, it's a critical part of the process.It is through this process that you will learn to conduct your own research through Googke or other domains, and build a wealth of resources. </p>
+
+		<main>
+
+
+	<footer>
+		<!-- replace Skillcrush with your name here -->
+    <p>&copy; Copyright Skillcrush 2014.</p>
+	</footer>
 </body>
 </html>
